--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,10 @@
+.app {
+  height: 100%;
+  display: flex;
+  flex-flow: column;
+}
+
+
 .loader {
     border: 16px solid #f3f3f3; /* Light grey */
     border-top: 16px solid #3498db; /* Blue */
