--- a/src/index.css
+++ b/src/index.css
@@ -1,10 +1,8 @@
-body {
+html , body {
   margin: 0;
-   
-
+  height: 100vh;
+  width: 100vw; 
   font-family: 'Roboto', sans-serif;
-
-
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
